
Mon Jul 31 15:49:17 EDT 1995	Paul Park	(pjpark@mit.edu)
	* kdb5_stash.c - Use kadm string conversion routines.


Mon Jul 17 15:02:29 EDT 1995	Paul Park	(pjpark@mit.edu)
	* configure.in - Add KADM library.
	* kdb5_stash.c - Change calling sequence to krb5_db_fetch_mkey().  Add
		KDC profile reading/handling as a supplement to command line
		arguments.


Fri Jul 7 15:38:50 EDT 1995	Paul Park	(pjpark@mit.edu)
	* Makefile.in - Remove all explicit library handling and LDFLAGS.
	* configure.in - Add USE_KDB5_LIBRARY and KRB5_LIBRARIES.


Fri Jun 30 14:31:23 EDT 1995	Paul Park	(pjpark@mit.edu)
	* configure.in - Add --with-dbm to select between Berkeley and DBM
		KDC database format.


Thu Jun 15 15:35:39 EDT 1995	Paul Park	(pjpark@mit.edu)
	* Makefile.in - Change explicit library names to -l<lib> form, and
		change target link line to use $(LD) and associated flags.
	* configure.in - Add shared library usage check.

Fri Jun  9 18:16:17 1995    <tytso@rsx-11.mit.edu>

	* configure.in: Remove standardized set of autoconf macros, which
		are now handled by CONFIG_RULES.

Thu Mar  2 13:03:01 1995  Theodore Y. Ts'o  <tytso@dcl>

	* Makefile.in (ISODELIB): Remove reference to $(ISODELIB).

Wed Mar  1 11:53:29 1995  Theodore Y. Ts'o  <tytso@dcl>

	* configure.in: Remove ISODE_INCLUDE, replace check for -lsocket
		and -lnsl with WITH_NETLIB check.

Tue Feb 28 02:08:04 1995  John Gilmore  (gnu at toad.com)

	* kdb5_stach.c:  Avoid <krb5/...> and <com_err.h> includes.

Fri Jan 13 15:23:47 1995  Chris Provenzano (proven@mit.edu)

    * Added krb5_context to all krb5_routines

Mon Oct  3 19:11:08 1994  Theodore Y. Ts'o  (tytso@dcl)

	* Makefile.in: Use $(srcdir) to find manual page for make install.

Thu Sep 29 22:20:51 1994  Theodore Y. Ts'o  (tytso@dcl)

	* Makefile.in: Relink executable when libraries change.

Wed Jun 29 00:23:09 1994  Tom Yu  (tlyu at dragons-lair)

	* kdb5_stash.c: fix things that should have been krb5_init_ets
